--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Geek developer, Beef lover</title>
+    <title>I'm awesome </title>
 </head>
 <body>
-    <h1>Hello World by n00b dev</h1>
+    <h1>Hello World by n00b dev!!!!</h1>
 </body>
 </html>
